tests/should_fail/for_destructure_non_list.nv
module test
// for destructure on non-list type
for (a, b) in 42 {
    println(Cast::string(a))
}
